# src/doc/swagger.json
@@ -96,6 +96,9 @@
 												"email": {
 													"type": "string"
 												},
+												"imageUri": {
+													"type": "string"
+												},
 												"role": {
 													"$ref": "#/components/schemas/_36_Enums.Role"
 												},
@@ -124,6 +127,7 @@
 											"required": [
 												"password",
 												"email",
+												"imageUri",
 												"role",
 												"phone",
 												"weight",
@@ -223,6 +227,9 @@
 													"email": {
 														"type": "string"
 													},
+													"imageUri": {
+														"type": "string"
+													},
 													"role": {
 														"$ref": "#/components/schemas/_36_Enums.Role"
 													},
@@ -251,6 +258,7 @@
 												"required": [
 													"password",
 													"email",
+													"imageUri",
 													"role",
 													"phone",
 													"weight",
@@ -339,6 +347,9 @@
 														"email": {
 															"type": "string"
 														},
+														"imageUri": {
+															"type": "string"
+														},
 														"role": {
 															"$ref": "#/components/schemas/_36_Enums.Role"
 														},
@@ -367,6 +378,7 @@
 													"required": [
 														"password",
 														"email",
+														"imageUri",
 														"role",
 														"phone",
 														"weight",
@@ -424,6 +436,9 @@
 												"email": {
 													"type": "string"
 												},
+												"imageUri": {
+													"type": "string"
+												},
 												"role": {
 													"$ref": "#/components/schemas/_36_Enums.Role"
 												},
@@ -452,6 +467,7 @@
 											"required": [
 												"password",
 												"email",
+												"imageUri",
 												"role",
 												"phone",
 												"weight",
@@ -555,6 +571,9 @@
 												"email": {
 													"type": "string"
 												},
+												"imageUri": {
+													"type": "string"
+												},
 												"role": {
 													"$ref": "#/components/schemas/_36_Enums.Role"
 												},
@@ -583,6 +602,7 @@
 											"required": [
 												"password",
 												"email",
+												"imageUri",
 												"role",
 												"phone",
 												"weight",
@@ -600,6 +620,184 @@
 											]
 										}
 									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Utilisateur"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/user/{id}/profile-image": {
+			"put": {
+				"operationId": "ImageUpdate",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"password": {
+											"type": "string"
+										},
+										"email": {
+											"type": "string"
+										},
+										"imageUri": {
+											"type": "string"
+										},
+										"role": {
+											"$ref": "#/components/schemas/_36_Enums.Role"
+										},
+										"phone": {
+											"type": "string"
+										},
+										"weight": {
+											"type": "number",
+											"format": "double"
+										},
+										"age": {
+											"type": "number",
+											"format": "double"
+										},
+										"surname": {
+											"type": "string"
+										},
+										"name": {
+											"type": "string"
+										},
+										"id": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"password",
+										"email",
+										"imageUri",
+										"role",
+										"phone",
+										"weight",
+										"age",
+										"surname",
+										"name",
+										"id"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Utilisateur"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"profileImage": {
+										"items": {
+											"type": "string",
+											"format": "binary"
+										},
+										"type": "array"
+									}
+								},
+								"required": [
+									"profileImage"
+								]
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "ResetProfileImage",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"password": {
+											"type": "string"
+										},
+										"email": {
+											"type": "string"
+										},
+										"imageUri": {
+											"type": "string"
+										},
+										"role": {
+											"$ref": "#/components/schemas/_36_Enums.Role"
+										},
+										"phone": {
+											"type": "string"
+										},
+										"weight": {
+											"type": "number",
+											"format": "double"
+										},
+										"age": {
+											"type": "number",
+											"format": "double"
+										},
+										"surname": {
+											"type": "string"
+										},
+										"name": {
+											"type": "string"
+										},
+										"id": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"password",
+										"email",
+										"imageUri",
+										"role",
+										"phone",
+										"weight",
+										"age",
+										"surname",
+										"name",
+										"id"
+									],
+									"type": "object"
 								}
 							}
 						}
